add basic implementation of backup logic (#6)
